force-app/main/default/objects/MA_Client_Reference_MD__mdt/MA_Client_Reference_MD__mdt.object-meta.xml
<CustomObject>
    <description>Used for MA Client Reference</description>
    <label>MA Client Reference MD</label>
    <pluralLabel>MA Client Reference MD</pluralLabel>
</CustomObject>