force-app/main/default/objects/MA_Client_Reference_MD__mdt/fields/FIeld_Condition__c.field-meta.xml
<CustomField>
    <fullName>FIeld_Condition__c</fullName>
    <label>FIeld Condition</label>
    <length>100</length>
    <type>Text</type>
</CustomField>