force-app/main/default/objects/MA_Client_Reference_MD__mdt/fields/Field_Filter_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Filter_Type__c</fullName>
    <label>Field Filter Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>