force-app/main/default/objects/MA_Client_Reference_MD__mdt/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field Label</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>