force-app/main/default/objects/MA_Client_Reference_MD__mdt/fields/Field_Order__c.field-meta.xml
<CustomField>
    <fullName>Field_Order__c</fullName>
    <label>Field Order</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>