force-app/main/default/objects/MA_Client_Reference_MD__mdt/fields/FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>FieldAPIName__c</fullName>
    <label>FieldAPIName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>